# giphrs

./: .gitignore  AGENTS.md  LICENSE  Package.swift  README.md  SKILLS.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/joelpedraza/giphrs/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/joelpedraza/giphrs/: GiphrsApplication.kt
android/app/src/main/java/com/joelpedraza/giphrs/ui/: MainActivity.kt
android/app/src/main/res/drawable/: ic_error_outline_24.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/joelpedraza/giphrs/: ExampleUnitTest.kt
android/core/: build.gradle
android/core/src/main/java/com/joelpedraza/giphrs/core/: Flows.kt  GiphRsErrorExtensions.kt  KotlinViewModel.kt
android/gradle/: libs.versions.toml
core/: Cargo.toml  build-ios.sh
core/giphrs/: Cargo.toml
core/giphrs/src/: api_client.rs  api_model.rs  broadcast_signal.rs  domain_model.rs  error.rs  lib.rs  offset_paginator.rs  rust_view_model.rs
core/uniffi-bindgen/: Cargo.toml
ios/App/App/: AppApp.swift  AppDelegate.swift  ContentView.swift  ErrorView.swift  GifGridView.swift  GiphRsError+Extensions.swift  ImageRenderMode.swift  PreviewWebPView.swift  SwiftViewModel.swift  ViewModelProtocol.swift  WebImageView.swift
ios/App/App.xcodeproj/: project.pbxproj
ios/App/App.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/Sources/GiphRsCore/: GiphRsCore.swift
(+8 files in other folders)
