[package]
name = "giphrs"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi.workspace = true
log = "0.4.28"
tokio = { version = "1.48.0" , features = ["rt-multi-thread"]}
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "rustls-tls", "json"]}
futures-signals = "0.3.34"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.20.2"
itertools = "0.14.0"

[target.'cfg(target_os = "android")'.dependencies]
android_log = "0.1.3"
jni = "0.21.1"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
